kubernetes/docker-kubernetes-be-services.yaml
apiVersion: v1
kind: Service

metadata:
  name: userdetails-backend-kubernetes-service
  
spec:
  type: NodePort

  selector:
      component: backend
  
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30010
