kubernetes/docker-kubernetes-fe-services.yaml
apiVersion: v1 
kind: Service

metadata:
  name: user-details-frontend-kubernetes-service

spec:
  type: NodePort

  selector: 
    component: front-end

  ports:
    - port: 4200
      targetPort: 4200
      nodePort: 30007
