kubernetes/docker-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-details-frontend-kubernetes-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: userdetails-backend-kubernetes-service
                port:
                  number: 8000
